[project]
name = "cas-data-mcp-service"
version = "0.1.0"
description = "Learning LLM, MCP, Symantic layer using pandasAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "langchain-community>=0.3.21",
    "matplotlib>=3.10.1",
    "mcp>=1.6.0",
    "pandas>=2.2.3",
    "pandasai>=2.0.24",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
]
